[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Rupam Patwari", email = "patwarirupam18081998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["PubMed", "research papers", "bioinformatics", "CLI tool"]
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer[all] (>=0.15.1,<0.16.0)"
]

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:get_papers_list"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"